# SubscripTrack

./: .gitignore  BaoCao.md  PHAN_TICH_THIET_KE.md  README.md  app.py  models.py  pyproject.toml  requirements.txt  run.py  scheduler.py
auth/: __init__.py  routes.py
src/subscriptrack/: __init__.py  config.py  models.py  utils.py
src/subscriptrack/blueprints/analytics/: __init__.py  routes.py
src/subscriptrack/blueprints/auth/: __init__.py  routes.py
src/subscriptrack/blueprints/dashboard/: __init__.py  routes.py
src/subscriptrack/blueprints/subscriptions/: __init__.py  routes.py
src/subscriptrack/static/css/: style.css
src/subscriptrack/static/js/: analytics.js  dashboard.js  main.js
src/subscriptrack/templates/: base.html
src/subscriptrack/templates/analytics/: index.html
src/subscriptrack/templates/auth/: login.html  register.html
src/subscriptrack/templates/dashboard/: index.html
static/: style.css
templates/: base.html  index.html  login.html  register.html
