[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subscriptrack"
version = "1.0.0"
description = "Quản lý & Cảnh báo chảy máu tiền từ các dịch vụ (Netflix, Spotify, iCloud...)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Login>=0.6.3",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/subscriptrack"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
